# OptLib

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: AddTest.cmake  Catch2.cmake
dll_example/: CMakeLists.txt
dll_example/dll_src/: CMakeLists.txt  Manager.h  Operator.h
dll_src/: CMakeLists.txt  Wrapper.cpp  Wrapper.h
examples/: CMakeLists.txt
optlib/Functions/: Paraboloid.h
optlib/Optimizers/: OptimizerInterface.h  OverallOptimizer.h
optlib/Points/: SetOfPointVals.h
optlib/Points/SetOfPoints/: SetOfPoints.h
optlib/Points/SetOfPoints/PointVals/: PointVal.h  PointValOperators.h
optlib/Points/SetOfPoints/PointVals/Point/: Point.h  PointOperators.h
optlib/States/: State.h  StateInterface.h
src/AuxMethods/: Point.h  PointOperators.h  PointOperatorsImpl.h  PointOperatorsSerial.h  PointVal.h  PointValOperators.h  SetOfPointVals.h  SetOfPoints.h  SetOfPointsOperators.h  Simplex.h  SimplexOps.h  SimplexSIMD.h  SimplexSerial.h
src/AuxMethods/Point/: Point.h  PointOperatorsImpl.h
src/AuxMethods/PointVal/: PointValOperators.h
src/AuxMethods/PointVal/Point/: Point.h  PointOperators.h
src/AuxMethods/SetOfPoints/PointVal/: PointValOperators.h
src/AuxMethods/SetOfPoints/PointVal/Point/: PointOperatorsImpl.h  PointOperatorsSerial.h
src/Functions/: FuncAlongGradDirection.h  Function.h  FunctionImproved.h  Paraboloid.h
src/Functions/Interface/: FuncInterface.h  FuncParamInterface.h
src/Optimizers/: OptimizerInterface.h  OverallOptimizer.h
src/Optimizers/OneDim/: Bisection.h  Dichotomy.h
src/Points/: Definitions.h  SetOfPointVals.h
src/Points/SetOfPoints/: SetOfPointOperators.h  SetOfPoints.h
src/Points/SetOfPoints/PointVal/: PointValOperators.h
src/States/: ImprovedState.h  State.h  StateInterface.h
test/: CMakeLists.txt  point_test.cpp  pointval_test.cpp
